--- a/frontend/language/ua.json
+++ b/frontend/language/ua.json
@@ -26,5 +26,7 @@
   "create-relation-dialog-button": "Створити",
 
   "profile": "Профіль",
-  "calendar": "Розклад"
+  "calendar": "Розклад",
+
+  "add": "Додати"
 }
