--- a/frontend/language/ua.json
+++ b/frontend/language/ua.json
@@ -33,5 +33,8 @@
 
   "change-language": "Вибрати мову",
   "ua-language": "Українська",
-  "uk-language": "Англійська"
+  "uk-language": "Англійська",
+
+  "math": "Математика",
+  "physics": "Фізика"
 }
