--- a/frontend/language/ua.json
+++ b/frontend/language/ua.json
@@ -49,5 +49,7 @@
   "foreign-languages": "Іноземна мова",
 
   "chat": "Чат",
-  "chat-message": "Повідомлення"
+  "chat-message": "Повідомлення",
+
+  "rating": "Рейтинг"
 }
