--- a/frontend/language/ua.json
+++ b/frontend/language/ua.json
@@ -85,5 +85,7 @@
 
   "all": "Всі користувачі",
   "by-request": "Через запит",
-  "nobody": "Ніхто"
+  "nobody": "Ніхто",
+
+  "share": "Поділитись"
 }
